try changing css to fix table width

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+.markdown-section table {
+    table-layout: fixed;
+    display:block;
+    overflow-x: auto;
+}
+
 .exercise {
   background-color: #ccffcc !important;
 }
