--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,31 @@
-.exercise {
-  background-color: #ccffcc !important;
+/*  fonts */
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
+body,
+.book.font-family-1 {
+  font-family: "Roboto", Helvetica, Arial, sans-serif;
 }
 
+/* link colour */
+.book .book-summary ul.summary li a:hover, .book .book-summary ul.summary li.active>a,
+.book .book-body .page-wrapper .page-inner section.normal a {
+    color: #da0a5d;
+}
+
+/*  exercise boxes */
+.exercise {
+  background-color: #bbf7f5 !important;
+}
+
+.exercise h2 {
+    padding-left: 25px;
+}
+
+/* tip and warning boxes */
 .note, .warning {
   padding: 1em 1em 1em 6em;
-  background: #cccccc 1em center/4em no-repeat;
+  background: #dededd 1em center/4em no-repeat;
+  border-radius: 2px;
 }
 
 .note {
@@ -15,3 +36,7 @@
   background-image: url("images/warning.png");
 }
 
+/* code boxes */
+pre {
+    border-radius: 3px;
+}
